--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -2,7 +2,7 @@
 <div id="homepage-container" class="w3-content">
 
   <!-- The Grid -->
-  <div class="w3-row-padding">
+  <div class="w3-row-padding flex">
 
 	   <!-- Left Column -->
 	   <div class="w3-quarter" id="left-column">
