--- a/IntershipTutor/WebContent/templates/errore.ftl.html
+++ b/IntershipTutor/WebContent/templates/errore.ftl.html
@@ -1,7 +1,8 @@
-<div>
-	<h1>Errore</h1>
-	<p>Il sistema ha avuto un problema con la gestione delle richiesta: </p>
-	<p><b>${error!"Unknown error"}</b></p>
+<div class="w3-center w3-padding">
+	<img class="w3-margin-top" alt="Univaq" src="img/univaq_logo.png" height="130" />
+	<h1>Errore<i class="fas fa-exclamation-triangle w3-margin-left"></i></h1>
+	<p>Il sistema ha riscontrato il seguente errore nella gestione della richiesta:</p>
+	<p><b>${error?no_esc!"Unknown error"}</b></p>
 	<div>
 		<a id="back-home" href=".">Ritorna alla homepage</a>
 	</div>
