--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -54,38 +54,46 @@
 			               			</#if>
 			               			${tirocinioStudente.stato?capitalize}
 			               		</p>
-			               		<p class="info"><i>Progetto formativo:</i></p>
 			               		<#if tirocinioStudente.stato.name() == "accettato">
+			               			<p class="info"><i>Progetto formativo:</i></p>
 			               			<form action="upload?candidato=${utente.utente}" method="post" enctype='multipart/form-data'>
 									    <input type="file" name="file" />
 									    <input class="pointer" type="submit" value="&#xf093;" />
 									</form>
 			               			<p class="info pointer">
 				               			<a href="download?candidato=${utente.utente}">
-					               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+					               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-top w3-margin-bottom w3-text-theme"></i>
 					               			Progetto formativo
 				               			</a>	
-			               			</p>	
+			               			</p>
+			               		<#else>
+				               		<p class="info"><i>Opzioni:</i></p>
+				               		<p class="info pointer">
+				               			<a href="tirocinioStudente?rimuovi=true&candidato=${utente.utente}&utente=${utente.utente}">
+					               			<i class="far fa-trash-alt fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+					               			Annulla richiesta
+				               			</a>	
+				               		</p>
 			               		</#if>
-			               		<p class="info"><i>Opzioni:</i></p>
-			               		<p class="info pointer">
-			               			<a href="tirocinioStudente?rimuovi=true&candidato=${utente.utente}&utente=${utente.utente}">
-				               			<i class="far fa-trash-alt fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
-				               			Annulla richiesta
-			               			</a>	
-			               		</p>
 			               	<#else>
 			               		<p class="info">
 			               			<i class="far fa-check-circle fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 			               			${tirocinioStudente.stato?capitalize}
 			               		</p>
-			               		<p class="info"><i>Stato richiesta:</i></p>
+			               		<p class="info"><i>Progetto formativo:</i></p>
 			               		<p class="info pointer">
 			               			<a href="download?candidato=${utente.utente}">
 				               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 				               			Progetto formativo
 			               			</a>	
 		               			</p>
+		               			<p class="info"><i>Opzioni:</i></p>
+			               		<p class="info pointer">
+			               			<a href="tirocinioStudente?rimuovi=true&candidato=${utente.utente}&utente=${utente.utente}">
+				               			<i class="fas fa-exclamation-triangle fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+				               			Elimina tirocinio
+			               			</a>	
+			               		</p>
 			               		<hr class="no-margin" />
 			               		<p class="info">
 			               			<label class="pointer" for="summary-modal">
@@ -217,7 +225,7 @@
 			</#if>
 	        <h2>Modifica informazioni</h2>
 	      </div>
-		      <form class="w3-container" action="./studente" method="post">
+		      <form class="w3-container" action="studente" method="post">
 		        <div class="w3-section">
 		          <!-- The user CF is hidden, it is used to retrieve the current user from database -->
 		          <input type="hidden" name="utente" value="${utente.utente}" />
