Minor graphic changes

--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -123,12 +123,12 @@
 			</#if>
 			 -->
 			<#if !studente??>
-				<label for="access-manager-modal" class="w3-button w3-right w3-round far fa-share-square w3-margin-top">
+				<label for="access-manager-modal" class="w3-button w3-margin-top w3-right w3-round send-button far fa-share-square w3-margin-top">
 					Invia proposta
 				</label>
 			</#if>
 			<#if studente?? && !tirocinioStudente??>
-				<label class="w3-button w3-right w3-round far fa-share-square w3-margin-top" for="intership-subscription-modal">
+				<label for="intership-subscription-modal" class="w3-button w3-margin-top w3-right w3-round send-button far fa-share-square w3-margin-top">
 					Invia proposta
 				</label>
 			</#if>
