--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -2,7 +2,7 @@
 <div id="homepage-container" class="w3-content">
 
   <!-- The Grid -->
-  <div class="w3-row-padding flex">
+  <div class="w3-row-padding">
 
 	   <!-- Left Column -->
 	   <div class="w3-quarter" id="left-column">
@@ -92,7 +92,7 @@
 						        ${offerta.modalita?substring(0,500)}...
 						    </#if>
 						</p>
-						<label for="access-manager-modal" class="w3-button w3-right w3-round far fa-share-square">
+						<label for="access-manager-modal" class="w3-button send-button w3-margin-top w3-right w3-round far fa-share-square">
 							Invia proposta
 						</label>
 					 </div>
