--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -192,7 +192,7 @@
 						    </#if>
 						</p>
 						<#if !tirocinioStudente??>
-							<label class="w3-button w3-right w3-round far fa-share-square" for="intership-subscription-modal-${offerta.idTirocinio}">
+							<label class="w3-button w3-margin-top w3-right w3-round far fa-share-square send-button" for="intership-subscription-modal-${offerta.idTirocinio}">
 								Invia proposta
 							</label>
 						</#if>
