--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -149,7 +149,7 @@
 					          <input id="codiceFiscaleStudente" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci il tuo nome" name="cognome" autocomplete="off" <#if studenteNR??>value="${studenteNR.cognome}"</#if> required />
 					          <label for="codiceFiscaleStudente"><b>Codice fiscale</b></label>
 					          <input id="cognomeStudente" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="16" type="text" placeholder="Inserisci il tuo codice fiscale" name="codice_fiscale" autocomplete="off" <#if studenteNR??>value="${studenteNR.codiceFiscale}"</#if> required />
-					          <#if CFInUso?? && CFInUso??>
+					          <#if CFInUso?? && CFInUso>
 					          	<p class="warning">Codice fiscale duplicato</p>
 					          </#if>
 					          <label for="dataNascita"><b>Data di nascita</b></label>
@@ -178,17 +178,17 @@
 					          <h3 class="univaq-color profile">Account</h3>
 					          <label for="usernameStudente"><b>Username</b></label>
 				         	  <input id="usernameStudente" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="15" type="text" placeholder="Inserisci il tuo username" name="username" autocomplete="off" <#if studenteNR??>value="${studenteNR.username}"</#if> required />
-					          <#if usernameInUso?? && usernameInUso??>
+					          <#if usernameInUso?? && usernameInUso>
 								<p class="warning">Username non disponibile</p>
 							  </#if>
 					          <label for="emailStudente"><b>Email</b></label>
 				         	  <input id="emailStudente" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci la tua email" name="email" autocomplete="off" <#if studenteNR??>value="${studenteNR.email}"</#if> required />
-					          <#if emailInUso?? && emailInUso??>
+					          <#if emailInUso?? && emailInUso>
 					          	<p class="warning">Email non disponibile</p>
 					          </#if>
 					          <label for="telefonoStudente"><b>Telefono</b></label>
 				          	  <input id="telefonoStudente" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="20" type="tel" placeholder="Inserisci il tuo telefono" name="telefono" autocomplete="off" <#if studenteNR??>value="${studenteNR.telefono}"</#if> required />
-					          <#if telefonoInUso?? && telefonoInUso??>
+					          <#if telefonoInUso?? && telefonoInUso>
 					          	<p class="warning">Telefono non disponibile</p>
 					          </#if>
 					          <label for="passwordStudente"><b>Password</b></label>
@@ -211,7 +211,7 @@
 					          <input id="nomeAzienda" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci il tuo nome" name="nome" autocomplete="off" <#if aziendaNR??>value="${aziendaNR.nome}"</#if> required />
 					          <label for="codiceFiscale"><b>Partita IVA/Codice fiscale</b></label>
 					          <input id="codiceFiscale" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="16" type="text" placeholder="Inserisci la partita IVA della tua azienda" name="codice_fiscale" autocomplete="off" <#if aziendaNR??>value="${aziendaNR.codiceFiscale}"</#if> required />
-					          <#if PIInUso?? && PIInUso??>
+					          <#if PIInUso?? && PIInUso>
 					          	<p class="warning">Codice fiscale duplicato</p>
 					          </#if>
 					          <label for="regioneAzienda"><b>Regione</b></label>
@@ -231,17 +231,17 @@
 					          <h3 class="univaq-color profile">Account</h3>
 					          <label for="usernameAzienda"><b>Username</b></label>
 				         	  <input id="usernameAzienda" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="15" type="text" placeholder="Inserisci il tuo username" name="username" autocomplete="off" <#if aziendaNR??>value="${aziendaNR.username}"</#if> required />
-					          <#if usernameAInUso?? && usernameAInUso??>
+					          <#if usernameAInUso?? && usernameAInUso>
 								<p class="warning">Username non disponibile</p>
 							  </#if>
 					          <label for="emailAzienda"><b>Email</b></label>
 				         	  <input id="emailAzienda" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="text" placeholder="Inserisci la tua email" name="email" autocomplete="off" <#if aziendaNR??>value="${aziendaNR.email}"</#if> required />
-					          <#if emailAInUso?? && emailAInUso??>
+					          <#if emailAInUso?? && emailAInUso>
 					          	<p class="warning">Email non disponibile</p>
 					          </#if>
 					          <label for="telefonoAzienda"><b>Telefono</b></label>
 				          	  <input id="telefonoAzienda" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="20" type="tel" placeholder="Inserisci il tuo telefono" name="telefono" autocomplete="off" <#if aziendaNR??>value="${aziendaNR.telefono}"</#if> required />
-					          <#if telefonoAInUso?? && telefonoAInUso??>
+					          <#if telefonoAInUso?? && telefonoAInUso>
 					          	<p class="warning">Telefono non disponibile</p>
 					          </#if>
 					          <label for="passwordAzienda"><b>Password</b></label>
