Redundant code on company details removed, pagination component is included instead

--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -101,94 +101,8 @@
         
       </div>
       
-      <!-- Pagination -->
-	       <div class="w3-center">
-	           <div id="pagination" class="w3-bar w3-border">
-	           		
-	           		<!-- back button only present if at least 2 pages are present -->
-	           		<#if (paginaCorrente + 1) gt 1>
-	           			<a href="?pagina=${(paginaCorrente - 1) + queryString}" class="padding-edge w3-a w3-hover-univaq-color-background">
-	           				&laquo;
-	           			</a>
-	           		</#if>
-	           		
-	           		<!-- Limit view if number of pages is greater than 5 -->
-	           		<#if numeroPagine gt 5>	           			
-	           				<a href="?pagina=0${queryString}" 
-	           				   class="w3-button 
-	           				   <#if (paginaCorrente + 1) == 1> 
-	           				   		univaq-color-background 
-	           				   <#else>
-	           				   		w3-hover-univaq-color-background
-	           				   </#if>">
-	           					1
-	           				</a>
-	           				<#if (paginaCorrente + 1) gt 3>...</#if>
-	           				
-	           				<#if paginaCorrente - 1 gt 0>
-	           					<a href="?pagina=${paginaCorrente - 1 + queryString}" class="w3-button w3-hover-univaq-color-background">
-									${paginaCorrente}
-								</a>
-	           				</#if>
-	           				
-	           				<#if (paginaCorrente) != 0 && paginaCorrente != numeroPagine - 1>
-	           					<a href="?pagina=${paginaCorrente + queryString}" class="w3-button univaq-color-background">
-			           				${paginaCorrente + 1}
-			           			</a>
-	           				</#if>
-	           				
-	           				<#if paginaCorrente + 1 lt numeroPagine - 1>
-	           					<a href="?pagina=${paginaCorrente + 1 + queryString}" class="w3-button w3-hover-univaq-color-background">
-									${paginaCorrente + 2}
-								</a>
-	           				</#if>
-	           				
-	           				<#if numeroPagine gt (paginaCorrente + 3)>...</#if>
-	           				
-	           				<a href="?pagina=${(numeroPagine - 1) + queryString}" 
-	           				   class="w3-button 
-	           				   <#if (paginaCorrente + 1) == numeroPagine > 
-	           				   		univaq-color-background 
-	           				   <#else>
-	           				   		w3-hover-univaq-color-background
-	           				   </#if>">
-	           					${numeroPagine}
-	           				</a>
-	           			
-	           		<!-- Show all pages number if number of pages is less than 5 -->
-	           		<#else>
-	           	
-	           			<#if numeroPagine gt 0>
-	           			<#assign pagine = (numeroPagine - 1)>
-	           			<#else>
-	           			<#assign pagine = 0>
-	           			</#if>
-						<#list 0..pagine as pagina>
-							<#if paginaCorrente == pagina>
-								<a href="?pagina=${pagina + queryString}"
-							       class="w3-button univaq-color-background">
-									${pagina + 1}
-								</a>
-							<#else>
-								<a href="?pagina=${pagina + queryString}"
-							       class="w3-button w3-hover-univaq-color-background">
-									${pagina + 1}
-								</a>
-							</#if>
-						</#list>
-					
-					</#if>
-					
-					<!-- forward button only present if current page is less then number of pages -->
-					<#if (paginaCorrente + 1) lt numeroPagine>
-	           			<a href="?pagina=${(paginaCorrente + 1) + queryString}" class="padding-edge w3-a w3-hover-univaq-color-background">
-	           				&raquo;
-	           			</a>
-	           		</#if>
-	           		
-	           </div>
-	       </div>
-	       <!-- End pagination -->
+      <!-- Including pagination -->
+	  <#include "components/pagination.ftl.html">
 
     <!-- End Right Column -->
     </div>
